assets/css/style.css
/* CUSTOM STYLES */
@import url("sticky-social-buttons.css");

html {
  position: relative;
  min-height: 100%;
}

body{
    margin-bottom: 150px;
}
#overlay:after {
    background: rgba(95, 96, 97, 0.4) url('../img/pattern.png') repeat top left;
    height: 100%;
    width: 100%;
    content: '';
    display: block;
}
#overlay {
    background: url("../img/promotec_bg_1.jpg") no-repeat;
    transition: background 1s;
    background-size: cover;
    position: fixed;
    height: 100%;
    width: 110%;
    top: 0;
    left: -10%;
    z-index: -1;
}

.main_container {
    z-index: 2;
}
/** Navbar **/

.navbar-promotec{
    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
}

.promotec-img {
    height: 120px;
}

.button-wrapper {
    height: 120px;
    display: inline-block;
    float: right;
    margin-right: 0px;

}

.btn-responsive{
    position: relative;
    width: 150px;
    height: 50px;
    top: 50%;
    transform: translateY(-50%);
}

/* Banner */

#ganar_dinero-banner {

    margin-top: 20px;
    padding: 1% 0 1% 0;
    text-align: center;
}

#ganar_dinero-banner span{
    font-weight: 900;
    font-size: 4.2em;
    color: blue;
    text-shadow:     
       3px 3px 0 white,
     -1px -1px 0 white,  
      1px -1px 0 white,
      -1px 1px 0 white,
       1px 1px 0 white;
}

/* Description y contenido*/

#descripcion {
    padding: 2% 0 2% 0;
    text-align: center;
}

#descripcion p, #descripcion span{
    color: white;
    margin-top:20px;
    font-size: 23px;
}
#descarga_app {    
    margin: 20px 0 20px 0;
}


/* Banner de franquicia */
#franquicias-banner {
    background: #ff8008; /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #ff8008, #ffc837); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #ff8008, #ffc837); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background-size: contain;
    padding: 5px;
    border: solid 1px #999;
    -moz-box-shadow: 1px 1px 8px #999;
    -webkit-box-shadow: 1px 1px 8px #999;
    box-shadow: 1px 1px 8px #999;
    margin-top: 60px;
    padding: 1% 0 1% 0;
    text-align: center;
}

#franquicias-banner p{
    font-size: 1.6em;
    color: white;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.franquicias-img {
    height: 100px;
}

/** Clases para logos **/
.logo{
    height: 125px;
    width: 125px;
}
.store-logo{
    margin: 20px;
}
.footer-logo-microtec{
  width: 100px;
}
.footer-logo-telcel{
  width: 250px;
  height: 80px;
}

#store-logos-container > *{
    margin: 1em 0 1em 0;
}

/** Clase para hacer el fondo transparente **/
.transparent {
    background-color:rgba(14, 171, 245, 0.0) !important;
}

/** Clases de ayuda para centrar y demás **/

.vertical-center-text{
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.hiddenPanel {
    display: none;
}
.padding-top{
  padding-top: 15px;
}

.error{
  color: red;
  margin: 10px 10px 10px 10px;
}

/* Sticky footer styles
-------------------------------------------------- */

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}
.footer-content{
  font-size: 15px;
}


/** Video wrapper for youtube **/
.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}


/** Estilos para  el panel de registro **/
.registro_instrucciones{
  margin: 10px 0 20px 0;
}
.registro_instrucciones > p{
  font-size: 1.5em;
}

